Dodano migracje bazy danych, stworzono podstawowe encje wymagane do systemu autoryzacji

--- a/ankiety-backend/Surveys.API/Surveys.API.csproj
+++ b/ankiety-backend/Surveys.API/Surveys.API.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surveys.Infrastructure\Surveys.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
