--- a/ankiety-backend/Surveys.API/appsettings.Development.json
+++ b/ankiety-backend/Surveys.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionString": {
+    "SurveyDB": "server=localhost;database=SurveysApplication;Integrated Security=true;"
   }
 }
