Dodano bazowe repozytorium oraz JwtTokenService

--- a/ankiety-backend/Surveys.API/appsettings.json
+++ b/ankiety-backend/Surveys.API/appsettings.json
@@ -9,5 +9,13 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     "SurveyDB": "server=localhost;database=SurveysApplication;Integrated Security=true;"
+  },
+  "JwtToken": {
+    "Secret": "\"7x!A%D*G-JaNdRgUkXp2s5v8y/B?E(H+",
+    "Issuer": "SurveysApplication",
+    "Audience": "SurveysApplication",
+    "TokenLifeTime": "00:10:00",
+    "RefreshTokenLifeTime": "7.00:00:00",
+    "RequireHttpsMetadata": false
   }
 }
