--- a/ankiety-backend/Surveys.API/appsettings.Development.json
+++ b/ankiety-backend/Surveys.API/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionString": {
     "SurveyDB": "server=localhost;database=SurveysApplication;Integrated Security=true;"
+  },
+  "ApplicationSettings": {
+    "ClientUrl": "http://localhost:4200"
   }
 }
