--- a/ankiety-backend/Surveys.API/appsettings.json
+++ b/ankiety-backend/Surveys.API/appsettings.json
@@ -17,5 +17,8 @@
     "TokenLifeTime": "00:10:00",
     "RefreshTokenLifeTime": "7.00:00:00",
     "RequireHttpsMetadata": false
+  },
+  "ApplicationSettings": {
+    "ClientUrl": "http://localhost:4200"
   }
 }
