SendGrid_email_backend

--- a/ankiety-backend/Surveys.API/appsettings.json
+++ b/ankiety-backend/Surveys.API/appsettings.json
@@ -6,9 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ExternalProviders": {
+    "SendGrid": {
+      "ApiKey": "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",
+      "SenderEmail": "tai_ankiety@o2.pl",
+      "SenderName": "NoReply"
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "SurveyDB": "server=localhost;database=SurveysApplication;Integrated Security=true;"
+    "SurveyDB": "server=localhost;database=SurveysApplication;Integrated Security=true;",
   },
   "JwtToken": {
     "Secret": "\"7x!A%D*G-JaNdRgUkXp2s5v8y/B?E(H+",
@@ -22,3 +29,5 @@
     "ClientUrl": "http://localhost:4200"
   }
 }
+  
+     
